2008-06-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8724: getElementsByClassName does not work properly in Firefox 3 and Safari 3.1 (thanks to Helmut Hummel)

2008-06-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #8790: htmlArea RTE image selection should honour hooking browsers
	* Added feature #8791: Let htmlArea RTE context menu use the RTE API
	* Fixed bug #8717 (cleanup): htmlArea RTE link browser does not honour correctly hooking browsers

2008-06-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8717 (revisited): htmlArea RTE link browser does not honour correctly hooking browsers

2008-06-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8716: htmlArea RTE: target configured on link class not honoured
	* Fixed bug #8716 (continued for dam): htmlArea RTE: target configured on link class not honoured
	* Fixed bug #8717: htmlArea RTE link browser does not honour correctly hooking browsers

2008-06-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8239: Wrong parameter order for strpos in t3lib_div::getHostname

2008-06-11  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8571: Moving backend search to the right

2008-06-11  Michael Stucki  <michael@typo3.org>

	* (security) Fixed a low-severity Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20080611-1/ - thanks to Christian Seifert, Jeroen van Iddekinge and Arnd Messer for discovering and reporting this issue.

2008-06-11  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed #8674: Vulnerability of security bulletin typo3-20080611-1: Default value of fileDenyPattern allows arbitrary code execution on Apache (Patch by Henning Pingel, thanks!)

2008-06-10  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8264: t3ditor - "+" (plus) signs are replaced by spaces (Thanks to Tobias Liebig)
	* Fixed bug 8591: AJAX encoding is UTF-8, thus has problems with backend charsets (Thanks to Tobias Liebig)
