@@ -1,3 +1,7 @@
+2008-06-23  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Added feature #8799: Move htmlArea RTE undo/redo handling to own extension
+
 2008-06-21  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #8790: htmlArea RTE image selection should honour hooking browsers
